2008-03-17  Vincent Untz  <vuntz@gnome.org>

	* Pessulus/disabledapplets.py: (__fill_liststore): fix exception raised
	when there's no name for an applet.
	Also really try to get the best translation by remembering we've found
	one, instead of just replacing the name whenever there's a new one.
	* Pessulus/icons.py: (load_icon): explicitly return None instead of
	nothing in case of error

2008-03-10  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 2.16.5.

==================== 2.16.4 ====================

2008-03-10  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 2.16.4.

2008-01-05  Josh Triplett  <josh@freedesktop.org>

	* Pessulus/lockdownapplier.py:
	* Pessulus/simpleeditabletreeview.py:
	* Pessulus/disabledapplets.py:
	* Pessulus/maindialog.py:
	* Pessulus/globalvar.py:
	* Pessulus/lockdowncheckbutton.py:
	* Pessulus/icons.py:
	* Pessulus/lockdownbutton.py:
	* Pessulus/safeprotocols.py:
	Remove shebangs from non-executable Python scripts (bug #424328).
	Patch from Debian sabayon package.

2007-09-17  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 2.16.4.

==================== 2.16.3 ====================

2007-09-17  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 2.20.0.

2007-03-15  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* data/pessulus.desktop.in.in:
	Remove invalid category "Application", add "GTK".

2006-12-18  Rob Bradford  <rob@robster.org.uk>

	* configure.ac: post-release bump to 2.16.3

==================== 2.16.2 ====================

2006-12-18  Rob Bradford  <rob@robster.org.uk>

	* NEWS: 
	* README:
	  Release 2.16.2.

2006-10-02  Rob Bradford <rob@robster.org.uk>

	* configure.ac: post-release bump to 2.16.2

==================== 2.16.1 ====================

2006-10-02 Rob Bradford <rob@robster.org.uk>

	* NEWS:
	* README:
	* configure.ac: Release 2.16.1.

2006-09-11  Rob Bradford  <rob@robster.org.uk>

	* pessulus.in: bug-buddy integration (bug #350578)